<resources>
    <string name="app_name">Live Coding Test</string>
    <string name="details">Details</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grameenphone_limited">Grameenphone Limited</string>
    <string name="gp_pb">GP.PB</string>
    <string name="money">৳ %1$s</string>
    <string name="random_text_here">Random text here</string>
    <string name="percentage">%1$s %</string>
</resources>