<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/topcard_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gp_pb"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/topcard_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grameenphone_limited" />

            <TextView
                android:id="@+id/topcard_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20">

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/random_text_here" />

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>